# hummingbot

./: .gitignore  COMMIT_CONFIRMATION.md  GIT_MERGE_SUMMARY.md  PAPER_REPLICATION_INDEX.md  PROJECT_COMPLETION_REPORT.md  TESTING_COMPLETE.md
controllers/market_making/: __init__.py  dman_maker_v2.py  pmm_bar_portion.py  (+2 more)
numba_bt/: ARCHITECTURE.md  AS_MODEL_FUTURE_STRATEGY_RESULTS.md  FUTURE_DATA_STRATEGY_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  MM_FLAG_DESIGN.md  PNL_CALCULATION_ANALYSIS.md  README.md  STRATEGY_ARCHITECTURE.md  STRATEGY_FRAMEWORK.md  STRATEGY_LOSS_ANALYSIS.md  VISUALIZATION_ENHANCEMENT.md  analyze_grid_search_results.py  analyze_pnl_detailed.py  analyze_pnl_discrepancy.py  analyze_strategy_loss.py  info.md  pyproject.toml  run_test.py  verify_order_size.py
numba_bt/results/: PROMPT.md  README.md
numba_bt/results/test/2025_11_24/02_54/: grid_search_results.json  parameter_importance_report.md
numba_bt/src/: __init__.py  const.py
numba_bt/src/analysis/: __init__.py  statistics.py  visualization.py
numba_bt/src/core/: __init__.py  backtest.py  backtest_as_model_future.py  backtest_future_data.py  backtest_momentum_mm.py  backtest_momentum_mm_optimized.py  backtest_with_hooks.py
numba_bt/src/data/: __init__.py  preparer.py  preprocessor.py
numba_bt/src/strategies/: README.md  __init__.py  as_model_future_strategy.py  base_strategy.py  future_data_strategy.py  momentum_mm_optimized_strategy.py  momentum_mm_strategy.py  standard_mm_strategy.py  timed_hedge_strategy.py
numba_bt/src/utils/: params_manager.py  path_manager.py  return_statistics.py  strategy_metrics.py
numba_bt/src/wrapper/: __init__.py  backtester.py
numba_bt/tests/: __init__.py  grid_search_as_model_future.py  run_grid_search.sh  test_as_model_future_strategy.py  test_axs_3days.py  test_backtest.py  test_future_data_strategy.py  test_load_funding_rate.py  test_momentum_mm_complete.py  test_momentum_mm_data_load.py  test_momentum_mm_full.py  test_momentum_mm_optimized.py  test_momentum_mm_strategy.py  test_timed_hedge_strategy.py  test_timed_hedge_with_funding.py
scripts/paper_replication/: API_LIMIT_ANALYSIS.md  ASTER_BACKTEST_VERIFICATION.md  BACKTEST_1MONTH_REPORT.md  BACKTEST_1MONTH_RESULTS.json  BACKTEST_1M_SUMMARY.md  BACKTEST_ANALYSIS_REPORT.md  BACKTEST_DIAGNOSIS.md  BACKTEST_ISSUE_ANALYSIS.md  BACKTEST_OPTIMIZATION_SUMMARY.md  BACKTEST_PAUSED_REPORT.md  BACKTEST_PROGRESS_REPORT.md  BACKTEST_RUNNING.md  BACKTEST_STRUCTURE_VERIFICATION.md  BACKTEST_SUMMARY.md  BACKTEST_VERIFICATION_REPORT.md  BINANCE_LOCAL_DATA_GUIDE.md  BP_FACTOR_DEBUG_REPORT.md  BP_FACTOR_DEBUG_SUMMARY.md  BTC_BACKTEST_CURRENT_STATUS.md  BTC_BACKTEST_STATUS.md  BUG_FIX_SUMMARY.md  COMPARISON_STATUS.md  COMPREHENSIVE_BACKTEST_STATUS.md  COMPREHENSIVE_COMPARISON_FINAL_SUMMARY.md  COMPREHENSIVE_COMPARISON_README.md  CUSTOM_EXPERIMENT_GUIDE.md  DATA_FLOW_FIX_SUMMARY.md  DATA_LOADING_FINAL_VERIFICATION.md  DATA_LOADING_FIX_FINAL.md  DATA_LOADING_FIX_SUMMARY.md  DATA_LOADING_VERIFICATION_REPORT.md  DEPLOYMENT_STATUS.md  DIAGNOSIS_REPORT.md  ENVIRONMENT_COMPLETE.md  ETH_REVERSED_STRATEGY_INFO.md  FINAL_ANALYSIS_REPORT.md  FINAL_BACKTEST_REPORT.md  FINAL_PNL_FIX_REPORT.md  FINAL_STATUS.md  FINAL_SUMMARY.md  (+121 more)
scripts/paper_replication/backtest_results/prod/2025_11_14_18_18/BTC_USDT/: BTC_USDT_prod.json
scripts/paper_replication/backtest_results/prod/2025_11_14_18_18/PUMP_USDT/: PUMP_USDT_prod.json
scripts/paper_replication/backtest_results/prod/2025_11_14_19_23/BTC_USDT/: BTC_USDT_prod.json
scripts/paper_replication/backtest_results/test/2025_11_14_17_20/: backtest_report.txt  backtest_results.json
(+120 files in other folders)
