[project]
name = "numba-bt"
version = "0.1.0"
description = "High-performance backtesting framework based on Numba and NumPy"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "numba>=0.58.0",
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "duckdb>=0.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

