[project]
name = "paper-replication"
version = "1.0.0"
description = "Replication of 'Market Making in Crypto' by Stoikov et al. (2024)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Hummingbot Community", email = "support@hummingbot.org"}
]
keywords = ["trading", "market-making", "cryptocurrency", "hummingbot", "algorithmic-trading"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    # Core dependencies
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.23.0,<2.0.0",
    "pandas-ta>=0.3.14b",
    
    # Visualization
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    
    # Data processing
    "scipy>=1.9.0,<2.0.0",
    
    # Async support
    "aiohttp>=3.8.0,<4.0.0",
    "asyncio>=3.4.3",
    
    # Utilities
    "python-dateutil>=2.8.0",
    "pytz>=2022.1",
    
    # Type checking
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
]

docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/hummingbot/hummingbot"
Documentation = "https://docs.hummingbot.org"
Repository = "https://github.com/hummingbot/hummingbot"
Issues = "https://github.com/hummingbot/hummingbot/issues"

[project.scripts]
paper-replication = "paper_replication.cli:main"
download-data = "paper_replication.download_candles_data:main"
run-backtest = "paper_replication.backtest_comparison:main"
run-experiment = "paper_replication.run_full_experiment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paper_replication"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
